--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.3.1",
     "aws-sdk": "^2.1692.0",
     "docxtemplater": "^3.59.0",
+    "docxtemplater-image-module-free": "^1.1.1",
     "next": "15.1.6",
     "pizzip": "^3.1.8",
     "react": "^19.0.0",
